--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
@@ -3,6 +3,7 @@
 @model PagedList.IPagedList<Event_Mgnt_System.Models.Event>
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_SignupLayoutPage.cshtml";
 }
 
 <!DOCTYPE html>
@@ -16,17 +17,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container" style="height:1150px; ">
-        <div class="row">
-            <div class="col-lg-12" style="height:100px; border:1px solid solid; ">
 
-
-                <img src="~/Content/img/Modern-e-Commerce-Web-Design-Trends.-Part-2.gif" style="width:100%; height:100%" />
-
-
-            </div>
-
-        </div>
 
 
 
@@ -35,12 +26,10 @@
             {
                 foreach (var item in Model)
                 {
-                    <div class="col-lg-4 col-md-4" style="height:200px;margin-top:100px">
-                        <img src="@Url.Content(item.event_image)" style=" height:100%;width:100% ;border-radius:50px 50px 50px 50px" />
-                        <h4 style="color:#808080; font-family:'Arial Rounded MT';text-align:center">@item.Event_Type</h4>
-                        <div style="margin-left:160px">
-                         
-                        </div>
+                    <div class="col-lg-4 col-md-4" style="height:200px;margin-top:60px">
+                        <img src="@Url.Content(item.event_image)" style=" height:80%;width:100% ;border-radius:5px 5px 5px 5px; margin-left:5px" />
+                        <h4 style="color:#000000; font-family:'Arial Rounded MT';text-align:center">@item.Event_Type</h4>
+                       
                     </div>
 
                 }
