--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Signup.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Signup.cshtml
@@ -2,20 +2,18 @@
 @model Event_Mgnt_System.Models.Registration
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_SignupLayoutPage.cshtml";
 }
 
 
 <style>
     #box {
-        border: 1px solid black;
-        height: 100%;
-    }
+     }
 
     #main-div {
-        height: 900px;
+        height:500px;
         background-image: url('../../Content/img/building6.jpg');
-        background-size: 100% 900px;
+     
     }
 
     .insidebox {
@@ -47,6 +45,7 @@
 
 <script src="js/bootstrap.min.js"></script>
 <script src="http://code.jquery.com/jquery.js"></script>
+
 <div id="main-div">
     <div id="box" class="img-responsive">
 
@@ -70,7 +69,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></div>
                     @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
                     @Html.TextBoxFor(x => x.Email_ID, new { @class = "form-control", @placeholder = "EmailId" })
 
@@ -80,7 +79,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                    <div class="input-group-addon"><span class=""></span></div>
                     @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
                     @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @placeholder = "Password" })
 
