--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
@@ -27,9 +27,10 @@
                 foreach (var item in Model)
                 {
                     <div class="col-lg-4 col-md-4" style="height:200px;margin-top:60px">
-                        <img src="@Url.Content(item.event_image)" style=" height:80%;width:100% ;border-radius:5px 5px 5px 5px; margin-left:5px" />
+                        
+                        <a href="@Url.Action("BookEvent","User", new {Name=@item.Event_Type})"><img src="@Url.Content(item.event_image)" style=" height:80%;width:100% ;border-radius:5px 5px 5px 5px; margin-left:5px" /></a>
                         <h4 style="color:#000000; font-family:'Arial Rounded MT';text-align:center">@item.Event_Type</h4>
-                       
+                        
                     </div>
 
                 }
