--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Signup.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Signup.cshtml
@@ -79,7 +79,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <div class="input-group-addon"><span class=""></span></div>
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
                     @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
                     @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @placeholder = "Password" })
 
@@ -89,7 +89,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
                     @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
                     @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
 
@@ -99,7 +99,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-map-marker"></span></div>
                     @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
                     @Html.TextBoxFor(x => x.City, new { @class = "form-control", @placeholder = "City" })
 
@@ -110,7 +110,7 @@
 
             <div class="form-group">
                 <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-earphone"></span></div>
                     @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
                     @Html.TextBoxFor(x => x.ContactNumber, new { @class = "form-control", @placeholder = "Contact Number" })
 
