--- a/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/ViewEvents.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/ViewEvents.cshtml
@@ -17,12 +17,10 @@
 <body>
     <div class="container" style="height:1150px; ">
         <div class="row">
-            <div class="col-lg-12" style="height:100px; border:1px solid solid; ">
+            <div class="col-lg-12" style="height:100px; ">
 
 
-                <img src="~/Content/img/Modern-e-Commerce-Web-Design-Trends.-Part-2.gif" style="width:100%; height:100%" />
-
-
+               
             </div>
 
         </div>
@@ -35,10 +33,10 @@
                 foreach (var item in Model)
                 {
                     <div class="col-lg-4 col-md-4" style="height:200px;margin-top:100px">
-                        <img src="@Url.Content(item.event_image)" style=" height:100%;width:100% ;border-radius:50px 50px 50px 50px" />
+                        <img src="@Url.Content(item.event_image)" style=" height:100%;width:100% ;border-radius:20px 20px 20px 20px" />
                         <h4 style="color:#808080; font-family:'Arial Rounded MT';text-align:center">@item.Event_Type</h4>
-                        <div style="margin-left:160px">
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Event_ID }, new { @class = "btn btn-danger btn-sm" })
+                        <div style="margin-left:160px" class="btn btn-danger btn-sm">
+                            <a href="@Url.Action("DeleteEvent","Admin", new { Id = item.Event_ID}) " style="color:blanchedalmond">Delete</a>
 
                         </div>
                     </div>
