--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
@@ -34,6 +34,7 @@
 <body>
 
     <div class="container" style="height:1150px; ">
+
         <div class="row">
             <div class="col-lg-12" style="height:100px;">
 
@@ -54,14 +55,12 @@
             <div class="col-lg-4 col-md-4" style="height:200px; margin-top:100px">
 
               <a href="@Url.Action("BookEvent","User", new {Name=@item.Event_Type})"><img src="@Url.Content(item.event_image)" class="im" style=" height: 100%;
-        width: 100%;
-        border-radius: 20px 20px 20px 20px;
-        margin-left: 5px" /></a>
+        width: 100%;border-radius: 20px 20px 20px 20px;  margin-left: 5px" /></a>
+
                 <div style=" color:white; font-size:30px; font-weight:200; text-align:center;font-family:Stencil;   position:absolute;top: 50%;left: 50%;transform: translate(-50%, -50%)">@item.Event_Type</div>
-       
-
-
+            
             </div>
+
 
                 }
             }
