--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Profile.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Profile.cshtml
@@ -73,9 +73,10 @@
 
             @if (Model != null)
             {
-
+                
                 foreach (var item in Model)
                 {
+
                     <div class="col-lg-2 col-md-2" style="height:100px; margin-top:100px;margin-left:130px">
                         <div class="panel panel-info" style="Height:400px;width:400px;margin-top:0px;font-size:large; font-weight:200px;font-family:'Lucida Bright';text-align:justify">
                             <div class="panel-heading"> Booking Information</div>
@@ -87,6 +88,9 @@
 
                                 <p>
                                     Booking ID:@item.Book_ID<br><br>
+
+                                  
+                                    
                                     Event Booked: @item.Event_Type<br><br>
 
                                     Event Venue: @item.Venue<br><br>
@@ -96,13 +100,14 @@
 
                                     Approval Status: @item.Approval
 
-                                    @if(@item.Approval=="confir")
-                                    {
-
-                                    <a href="@Url.Action("PackageSelection","User")">
+                                    @if(@item.Approval=="confir" && @item.Book_ID!=null)
+                                     {
+                                             
+                                    <a href="@Url.Action("PackageSelection","User", new {name="yes",id=item.Book_ID})">
                                         <button type="button" class="btn btn-success">Select Package</button>
                                     </a>
                                     }
+
                                 </p>
 
 
