admin home and home page slider

--- a/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/ViewEvents.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/ViewEvents.cshtml
@@ -2,6 +2,7 @@
 @model PagedList.IPagedList<Event_Mgnt_System.Models.Event>
 @{
     ViewBag.Title = "ViewEvents";
+    Layout = null; ;
 }
 
 <!DOCTYPE html>
