--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
@@ -3,7 +3,8 @@
 @model PagedList.IPagedList<Event_Mgnt_System.Models.Event>
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_SignupLayoutPage.cshtml";
+    Layout = "~/Views/Shared/_LayoutPage.cshtml";
+
 }
 
 <!DOCTYPE html>
@@ -12,39 +13,105 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>View  Category</title>
+
     <link href="~/Content/paginition.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/slider.css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-</head>
-<style>
 
-    .im:hover{
+
+    <style>
+
+        .im:hover {
             filter: blur(3px);
             -webkit-filter: blur(3px);
-              -moz-box-shadow: 10px 10px 5px #808080;
-           -webkit-box-shadow: 10px 10px 5px #808080;
-           box-shadow: 10px 10px 5px #808080;
-           -moz-border-radius:25px;
-          -webkit-border-radius:25px;
-     
-            
-    }
+            -moz-box-shadow: 10px 10px 5px #808080;
+            -webkit-box-shadow: 10px 10px 5px #808080;
+            box-shadow: 10px 10px 5px #808080;
+            -moz-border-radius: 25px;
+            -webkit-border-radius: 25px;
+        }
 
-</style>
+        
+    </style>
+
+
+</head>
+
 <body>
 
-    <div class="container" style="height:1150px; ">
+    @*<div class="container"style="margin-top:150px;background-size:100% 100%;position:absolute;width:70%;height:400px;transform:translate(-50% -50%)">
 
-        <div class="row">
-            <div class="col-lg-12" style="height:100px;">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                 Indicators
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+
+                 Wrapper for slides
+                <div class="carousel-inner" style="width:100%; height:50%" >
 
 
-               
+                        <div class="item active">
+                            <img src="~/Content/images/slide1.jpg" alt="Los Angeles" style="width:100%">
+                            <div class="carousel-caption">
+                                <h3>Destination Wedding</h3>
+                                <p>Excciting Destination Wedding</p>
+                            </div>
+                        </div>
 
 
-            </div>
 
-        </div>
+
+                        <div class="item">
+                            <img src="~/Content/images/slide2.jpg" alt="Chicago" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                        </div>
+
+
+
+                        <div class="item">
+
+                            <img src="~/Content/images/slide6.jpg" alt="New York" style="width:100%">
+                            <div class="carousel-caption">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+
+                     Left and right controls
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+        </div>*@
+
+
+    <div class="maindiv">
+
+
+    </div>
+
+
+
+
+
+    <div class="container" style="height: 1150px; margin-top: 600px ">
+
 
 
         <div class="row" style="margin-bottom:40px" id="event">
@@ -52,14 +119,15 @@
             {
                 foreach (var item in Model)
                 {
-            <div class="col-lg-4 col-md-4" style="height:200px; margin-top:100px">
+                    <div class="col-lg-4 col-md-4" style="height:200px; margin-top:100px">
 
-              <a href="@Url.Action("BookEvent","User", new {Name=@item.Event_Type})"><img src="@Url.Content(item.event_image)" class="im" style=" height: 100%;
-        width: 100%;border-radius: 20px 20px 20px 20px;  margin-left: 5px" /></a>
+                        <a href="@Url.Action("BookEvent","User", new {Name=@item.Event_Type})">
+                            <img src="@Url.Content(item.event_image)" class="im" style=" height: 100%; width: 100%; border-radius: 5px 5px 5px 5px; margin-left: 5px" />
+                        </a>
 
-                <div style=" color:white; font-size:30px; font-weight:200; text-align:center;font-family:Stencil;   position:absolute;top: 50%;left: 50%;transform: translate(-50%, -50%)">@item.Event_Type</div>
-            
-            </div>
+                        <div style=" color:white; font-size:30px; font-weight:200; text-align:center;font-family:Stencil;   position:absolute;top: 50%;left: 50%;transform: translate(-50%, -50%)">@item.Event_Type</div>
+
+                    </div>
 
 
                 }
