--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Login.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Login.cshtml
@@ -3,96 +3,111 @@
 
 @{
     Layout = null;
+     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
+    <head>
+        <link href="~/Content/bootstrap.css" rel="stylesheet" />
+        <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+        <script src="js/bootstrap.min.js"></script>
+        <script src="http://code.jquery.com/jquery.js"></script>
 
 
-<style>
-    #box {
-        border: 1px solid black;
-        height: 100%;
-    }
+        <style>
+            #box {
+               
+                height:40%;
+            }
 
-    #main-div {
-        height: 900px;
-        background-image: url('../../Content/img/building6.jpg');
-        background-size: 100% 900px;
-    }
+            #main-div {
+                height: 600px;
+                // background-image: url('../../Content/img/building6.jpg');
+                background-size: 100% 900px;
+          
+            }
 
-    .insidebox {
-        border: 1px solid black;
-        margin: 10% auto 10% auto;
-        max-width: 500px;
-        min-width: 200px;
-        padding-left: 60px;
-        padding-right: 60px;
-        border-radius: 10px;
-        background-color: whitesmoke;
-    }
+            .insidebox {
+                border: 1px solid black;
+                margin: 10% auto 10% auto;
+                max-width: 500px;
+                min-width: 200px;
+                padding-left: 90px;
+                padding-right: 60px;
+                border-radius: 10px;
+                //background-color: whitesmoke;
+                margin-top: 250px;
+                
+            }
 
-    div h1 {
-        text-align: center;
-    }
+            div h1 {
+                text-align: center;
+            }
 
-    p#para {
-        text-align: center;
-        font-size: 14px;
-    }
-</style>
-
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-
-
+            p#para {
+                text-align: center;
+                font-size: 14px;
+            }
+        </style>
 
 
-<script src="js/bootstrap.min.js"></script>
-<script src="http://code.jquery.com/jquery.js"></script>
+    </head>
+
+
+
+
 <div id="main-div">
     <div id="box" class="img-responsive">
         @using (@Html.BeginForm())
         {
-            <div class="insidebox">
-                <div> <h3>Log In</h3></div>
+        <div class="insidebox">
+            <div> <h3>Log In</h3></div>
 
 
+            <br />
 
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
 
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-                        @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
-                        @Html.TextBoxFor(x => x.User_Name, new { @class = "form-control", @placeholder = "Username" })
-
-                    </div>
-                    <span style="color:red">   @Html.ValidationMessageFor(x => x.User_Name) </span>
+                    @Html.TextBoxFor(x => x.User_Name, new { @class = "form-control", @placeholder = "Username" })
 
                 </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
-                        @*<asp:TextBox ID="txtpassword" runat="server" class="form-control" placeholder="Password" TextMode="Password" required="required"></asp:TextBox>*@
-                        @Html.PasswordFor(x => x.Password, new { @class = "form-control", @placeholder = "Password" })
-
-                    </div>
-                    <span style="color:red">   @Html.ValidationMessageFor(x => x.Password) </span>
-                </div>
-
-
-
-
-                <div class="form-group">
-                    @*<asp:Button ID="Button1" runat="server" Text="Log In" class="form-control  btn-success" OnClick="Button1_Click" OnClientClick="retrun(passwordmatchfunc())" />*@
-                    <input type="submit" value="Login" class="btn btn-success btn-block" />
-
-                </div>
-
-                <div class="form-group">
-                    <p style="color:red">@ViewBag.error</p>
-                </div>
-
-
+                <span style="color:red">   @Html.ValidationMessageFor(x => x.User_Name) </span>
 
             </div>
+            <br />
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
+                    @*<asp:TextBox ID="txtpassword" runat="server" class="form-control" placeholder="Password" TextMode="Password" required="required"></asp:TextBox>*@
+                    @Html.PasswordFor(x => x.Password, new { @class = "form-control", @placeholder = "Password" })
+
+                </div>
+                <span style="color:red">   @Html.ValidationMessageFor(x => x.Password) </span>
+            </div>
+
+
+            <br />
+            
+
+            <div class="form-group">
+                @*<asp:Button ID="Button1" runat="server" Text="Log In" class="form-control  btn-success" OnClick="Button1_Click" OnClientClick="retrun(passwordmatchfunc())" />*@
+                <input type="submit" value="Login" class="btn btn-success btn-block" style="text-align:center; background-color:darkslategrey" />
+                <br />
+
+                <a href="@Url.Action("Signup","User")" style="color:blue">New User?? Register Here</a>
+
+            </div>
+
+            <div class="form-group">
+                <p style="color:red">@ViewBag.error</p>
+            </div>
+
+
+
+
+
+
+        </div>
 
         }
     </div>
